Commented truck driver filter due to breakage, updates to attestation

--- a/veoc/templates/veoc/truck_driver_registration.html
+++ b/veoc/templates/veoc/truck_driver_registration.html
@@ -114,7 +114,7 @@
                       </div>
                        <div class="form-group col-md-4">
                          <label for="callernumber">ID / Passport / Alien Number : *</label>
-                         <input class="form-control" type="text" id="passport_number" name="passport_number" maxlength="10" size="45" placeholder="Passport Number" required/>
+                         <input class="form-control" type="text" id="passport_number" name="passport_number" maxlength="10" size="45" placeholder="ID / Passport / Alien Number" required/>
                        </div>
                     </div>
                     <div class="form-row" id="county_div" style="display: none;">
@@ -166,7 +166,7 @@
                          <input class="form-control" type="text" id="nok" name="nok" placeholder="Next of Kin"/>
                        </div>
                        <div class="form-group col-md-4">
-                         <label for="callername">Next of Kin Phone No : </label>
+                         <label for="callername">Next of Kin Phone Number : </label>
                          <input class="form-control" type="number" id="nok_phone_num" name="nok_phone_num" minlength="10" placeholder="Next of Kin Phone Number"/>
                        </div>
                        <div class="form-group col-md-4">
@@ -300,7 +300,7 @@
                        </div>
                        <div class="form-group col-md-4">
                          <label for="h_phone">Hotel Phone Number: </label>
-                         <input class="form-control" type="tel" id="hotel_phone" name="hotel_phone" placeholder="Hotel Phone">
+                         <input class="form-control" type="tel" id="hotel_phone" name="hotel_phone" placeholder="Hotel Phone Number">
                        </div>
                        <div class="form-group col-md-4">
                          <label for="h_town">Hotel Town : </label>
