--- a/veoc/templates/veoc/users.html
+++ b/veoc/templates/veoc/users.html
@@ -18,7 +18,7 @@
       					<div class="col-sm-12 col-md-12">
       						<div class="col-md-12" style="padding-bottom:10px">
       							<button type="button" id="modalbtn" class="btn btn-info btn-sm pull-left" data-toggle="modal" data-target="#addUserModal"> <i class="fa fa-plus" aria-hidden="true"></i> Add User</button>
-&nbsp<a href="{% url 'veoc:export_csv' %}" class="btn btn-info btn-sm"><i class="fa fa-download" aria-hidden="true"></i> Users Raw Data</a>
+{#&nbsp<a href="{% url 'veoc:export_csv' %}" class="btn btn-info btn-sm"><i class="fa fa-download" aria-hidden="true"></i> Users Raw Data</a>#}
                   </div>
 
       					</div><!-- /.col -->
