--- a/veoc/templates/veoc/truck_driver_profile.html
+++ b/veoc/templates/veoc/truck_driver_profile.html
@@ -740,18 +740,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.1.4/jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
   <script>
-    function btnSave(){
-      var doc = new jsPDF();
-  var elementHTML = $('#dvAttestation').html();
-  var specialElementHandlers = {
-      '#elementH': function (element, renderer) {
-          return true;
-      }
-  };
-  doc.fromHTML(elementHTML, 15, 15, {
-      'width': 170,
-      'elementHandlers': specialElementHandlers
-  });
+    function btnSave() {
+        var doc = new jsPDF();
+        var elementHTML = $('#dvAttestation').html();
+        var specialElementHandlers = {
+            '#elementH': function (element, renderer) {
+                return true;
+            }
+        };
+        doc.fromHTML(elementHTML, 15, 15, {
+            'width': 170,
+            'elementHandlers': specialElementHandlers
+        });
+    }
     $(document).ready(function() {
 
         var labForm = $(".track_driver_profile")
@@ -810,6 +811,7 @@
             console.log("inside editDetailsForm");
             var thisForm = $(this);
             var endPoint = thisForm.attr("action") || window.location.href;
+            console.log(endPoint);
             var method = thisForm.attr("method");
             var formData = thisForm.serialize();
 
@@ -864,8 +866,6 @@
             {% if forloop.last %}
                 {% for l in patient_details %}
                     msg = "{{ lab.test_sample_uuid }}"
-{#                    msg = "Names : {{ lab.patient_contacts.first_name }} {{ lab.patient_contacts.last_name }} \nID/Passport No : {{ lab.patient_contacts.passport_number }} \nPhone No : {{ lab.patient_contacts.phone_number }}" +#}
-{#                    " \nCompany : {{ l.company_name }} \nLab : {{ lab.lab.name }} \nLab Results: {{ lab.lab_results }}";#}
                     qrcode.makeCode(msg)
                 {% endfor %}
             {% endif %}
