highliting Yeses, edit Profile change

--- a/veoc/templates/veoc/home_care_symtomatic.html
+++ b/veoc/templates/veoc/home_care_symtomatic.html
@@ -60,8 +60,8 @@
                             <th>Difficulty in breathing?</th>
                             <th>Comments</th>
                             <th>Registered By</th>
-                            <th>County</th>
-                            <th>Sub County</th>
+                          <!--  <th>County</th>
+                            <th>Sub County</th>-->
                           </tr>
                           </thead>
                           <tbody>
@@ -94,17 +94,32 @@
                             {% else %}
                                 <td>{{ follow.body_temperature }}</td>
                             {% endif %}
-                            <td>{{ follow.fever }}</td>
-                            <td>{{ follow.cough }}</td>
-                            <td>{{ follow.difficulty_breathing }}</td>
+                            {% if follow.fever == "YES" %}
+                            <td style="background-color: #F51B00">
+                              <b>{{ follow.fever }}</b></td>
+                            {% else %}
+                                <td>{{ follow.fever }}</td>
+                            {% endif %}
+                            {% if follow.cough == "YES" %}
+                            <td style="background-color: #F51B00">
+                              <b>{{ follow.cough }}</b></td>
+                            {% else %}
+                                <td>{{ follow.cough }}</td>
+                            {% endif %}
+                            {% if follow.difficulty_breathing == "YES" %}
+                            <td style="background-color: #F51B00">
+                              <b>{{ follow.difficulty_breathing }}</b></td>
+                            {% else %}
+                                <td>{{ follow.difficulty_breathing }}</td>
+                            {% endif %}
                             {% if follow.comment.strip %}
                               <td>{{ follow.comment }}</td>
                             {% else %}
                               <td>None</td>
                             {% endif %}
-                            <td>{{ follow.patient_contacts.contact_by_id }}</td>
-                              <td>{{ follow.patient_contacts.county_id }}</td>
-                                <td>{{ follow.patient_contacts.subcounty_id }}</td>
+                            <td>{{ follow.patient_contacts.created_by.first_name }}</td>
+                              <!--<td>{{ follow.patient_contacts.county_id }}</td>
+                                <td>{{ follow.patient_contacts.subcounty_id }}</td>-->
                           </tr>
                         {% endfor %}
                       </tbody>
