--- a/veoc/templates/veoc/edit_profile.html
+++ b/veoc/templates/veoc/edit_profile.html
@@ -26,7 +26,7 @@
         <div class="col-md-9" >
 
           <h3>Personal information</h3>
-<p>You have to edit your password, email and phone number are optional. </p>
+<p>You <span style="color:red">have</span> to edit your password. Your Email Address and Phone Number are <span style="color:red">optional</span>. </p>
           <form class="form-horizontal" role="form" method="post" action="{% url 'veoc:edit_profile' %}"> {% csrf_token %}
 
             <div class="form-group">
