--- a/veoc/templates/veoc/home_care_follow_up.html
+++ b/veoc/templates/veoc/home_care_follow_up.html
@@ -111,13 +111,13 @@
                               <b>{{ follow.difficulty_breathing }}</b></td>
                             {% else %}
                                 <td>{{ follow.difficulty_breathing }}</td>
-                            {% endif %}                            
+                            {% endif %}
                             {% if follow.comment.strip %}
                               <td>{{ follow.comment }}</td>
                             {% else %}
                               <td>None</td>
                             {% endif %}
-                            <td>{{ follow.patient_contacts.contact_by_id }}</td>
+                            <td>{{ follow.patient_contacts.created_by.username }}</td>
                               <td>{{ follow.patient_contacts.county_id }}</td>
                                 <td>{{ follow.patient_contacts.subcounty_id }}</td>
                           </tr>
