--- a/veoc/templates/veoc/quarantine_symptomatic.html
+++ b/veoc/templates/veoc/quarantine_symptomatic.html
@@ -59,6 +59,7 @@
                             <th>Has Cough?</th>
                             <th>Difficulty in breathing?</th>
                             <th>Comments</th>
+                            <th>Registered By</th>
                           </tr>
                           </thead>
                           <tbody>
@@ -91,14 +92,30 @@
                             {% else %}
                                 <td>{{ follow.body_temperature }}</td>
                             {% endif %}
-                            <td>{{ follow.fever }}</td>
-                            <td>{{ follow.cough }}</td>
-                            <td>{{ follow.difficulty_breathing }}</td>
+                            {% if follow.fever == "YES" %}
+                            <td style="background-color: #F51B00">
+                              <b>{{ follow.fever }}</b></td>
+                            {% else %}
+                                <td>{{ follow.fever }}</td>
+                            {% endif %}
+                            {% if follow.cough == "YES" %}
+                            <td style="background-color: #F51B00">
+                              <b>{{ follow.cough }}</b></td>
+                            {% else %}
+                                <td>{{ follow.cough }}</td>
+                            {% endif %}
+                            {% if follow.difficulty_breathing == "YES" %}
+                            <td style="background-color: #F51B00">
+                              <b>{{ follow.difficulty_breathing }}</b></td>
+                            {% else %}
+                                <td>{{ follow.difficulty_breathing }}</td>
+                            {% endif %}
                             {% if follow.comment.strip %}
                               <td>{{ follow.comment }}</td>
                             {% else %}
                               <td>None</td>
                             {% endif %}
+                            <td>{{ follow.patient_contacts.created_by.username}}</td>
                           </tr>
                         {% endfor %}
                       </tbody>
