--- a/veoc/templates/veoc/truck_driver_profile.html
+++ b/veoc/templates/veoc/truck_driver_profile.html
@@ -448,9 +448,7 @@
                                         <td>{{ lab.date_specimen_collected|date:'d-m-Y' }}</td>
                                         <td>{{ lab.specimen_type }}</td>
                                         <td>{{ lab.lab.name }}</td>
-                                        {% for res in lab_results %}
-                                            <td>{{ res.result }}</td>
-                                        {% endfor %}
+                                        <td>{{ lab.lab_results }}</td>
                                         <td>{{ lab.date_lab_confirmation|date:'d-m-Y' }}</td>
                                         <td>{{ lab.sample_identifier }}</td>
                                     </tr>
@@ -483,7 +481,7 @@
                         </div>
                         <hr>
                         <div class="invoice-box" id="dvContainer">
-                            {% for lab in lab_results %}
+                            {% for lab in lab_res %}
                                 {% if forloop.last %}
                                     <table cellpadding="0" cellspacing="0">
                                         <tr class="top">
@@ -532,13 +530,11 @@
                                         </tr>
                                         <tr class="item">
                                             <td>Date Sample Collected</td>
-                                            {% for res in lab_res %}
-                                                <td><i>{{ res.date_specimen_collected|date:'d-m-Y' }}</td>
-                                            {% endfor %}
+                                            <td><i>{{ lab.date_specimen_collected|date:'d-m-Y' }}</td>
                                         </tr>
                                         <tr class="item">
                                             <td>Date Test Confirmation</td>
-                                            <td><i>{{ lab.date_tested|date:'d-m-Y' }}</i></td>
+                                            <td><i>{{ lab.date_lab_confirmation|date:'d-m-Y' }}</i></td>
                                         </tr>
                                         <tr class="item">
                                             <td>Health Status</td>
@@ -550,9 +546,7 @@
                                         </tr>
                                         <tr class="item">
                                             <td>Sample Type</td>
-                                            {% for res in lab_res %}
-                                                <td><i>{{ res.specimen_type.name }}</i></td>
-                                            {% endfor %}
+                                            <td><i>{{ lab.specimen_type.name }}</i></td>
                                         <tr class="item">
                                         <td>Results Received by</td>
                                         {% for pat in patient_details %}
@@ -560,12 +554,12 @@
                                         {% endfor %}
                                     </tr>
                                         <tr class="item last">
-                                            <td>Date Received</td>
-                                            <td><i>{{ lab.created_at|date:'d-m-Y' }}</i></td>
+                                            <td>Date dispatched</td>
+                                            <td><i>{{ lab.date_lab_confirmation|date:'d-m-Y' }}</i></td>
                                         </tr>
                                         <tr class="total">
                                             <td>Lab Results</td>
-                                            <td><i>{{ lab.result }}</i></td>
+                                            <td><i>{{ lab.lab_results }}</i></td>
                                         </tr>
                                     </table>
                                 {% endif %}
@@ -585,10 +579,9 @@
                         </div>
                         <hr>
                         <div class="invoice-box" id="dvAttestation">
-                            {% for lab in lab_results %}
-                                {% if forloop.last and lab.result == "Negative" %}
-{#                                    {% if lab.result == "Negative" %}#}
-                                    <table cellpadding="0" cellspacing="0">
+                            {% for lab in lab_res %}
+                                {% if forloop.last %}
+                                    <table id="dvTable">
                                         <tr class="heading">
                                             <div colspan="2">
                                                 <div>
@@ -648,7 +641,7 @@
                                                         exact place of work){% for l in patient_details %}
                                                                     ____<i><b>{{ l.company_name }}</b></i>________{% endfor %} has been
                                                         tested and found negative for COVID-19 following laboratory tests conducted
-                                                        on ___<i><b>{{ lab.date_tested|date:'d-m-Y' }}</b></i>____ at the ____<i><b>{{ lab.lab }}</b></i>___
+                                                        on ___<i><b>{{ lab.date_lab_confirmation|date:'d-m-Y' }}</b></i>____ at the ____<i><b>{{ lab.lab.name }}</b></i>___
                                                         (indicate laboratory facility)
                                                         This attestation is issued in accordance with Public Health Act Cap 242 Laws of Kenya
                                                         and the applicable Rules and Regulations for Prevention and Suppression of Infectious
@@ -708,24 +701,21 @@
                                         </tr>
                                     </table>
                                 </div>
-
+                                <div id="elementH"></div>
                             <div>
                             <hr>
-                            <button class="btn btn-lg btn-success pull-right" type="button" onclick="btnSave()"><i class="glyphicon glyphicon-save"></i> Save PDF</button>
+                            <button class="btn btn-lg btn-success pull-right" type="button" onclick="saveDiv()"><i class="glyphicon glyphicon-save"></i> Save PDF</button>
 
                                 <button class="btn btn-lg btn-success pull-right" onclick="javascript:PrintElem();" type="submit" id="btnAttPrint"><i class="glyphicon glyphicon-print"></i> Print Attestation</button>
                             </div>
-                                {% else %}
-                                    <h3>No attestation data for {{ lab.patient_contacts.first_name }} {{ lab.patient_contacts.last_name }}</h3>
-                            {% endif %}
-                            {% endfor %}
+                        {% endif %}
+                        {% endfor %}
                     </div>
                 </div>
             </div><!--/tab-content-->
         </div><!--/col-9-->
     </div><!--/row-->
 {#    </div>#}
-
 
 {% endblock %}
 
@@ -735,23 +725,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"> </script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="https://cdn.jsdelivr.net/npm/promise-polyfill"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.1.4/jspdf.plugin.autotable.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.1.4/jspdf.plugin.autotable.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="lib/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/"
+        crossorigin="anonymous"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
   <script>
-    function btnSave(){
-      var doc = new jsPDF();
-  var elementHTML = $('#dvAttestation').html();
-  var specialElementHandlers = {
-      '#elementH': function (element, renderer) {
-          return true;
-      }
-  };
-  doc.fromHTML(elementHTML, 15, 15, {
-      'width': 170,
-      'elementHandlers': specialElementHandlers
-  });
+    //Generate PDF
+    function saveDiv() {
+      //var canvas = document.getElementById('canvas');
+      let pdf = new jsPDF('p', 'pt',[600, 900]);//new jsPDF('p', 'pt',[900, 1200]);
+      pdf.setPage(1);
+      pdf.setFontSize(8);
+         pdf.html(document.getElementById('dvTable'), {
+             callback: function (pdf) {               
+                 pdf.save('jitenge.pdf');
+             }
+         });
+    };
+
     $(document).ready(function() {
 
         var labForm = $(".track_driver_profile")
