added airport app to main menu, views functions

--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -215,6 +215,16 @@
               </ul>
           </li>
           <li>
+              <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-plane fa-stack-1x "></i></span>AIRPORT REPORTS</a>
+              <ul class="nav-pills nav-stacked" style="list-style-type:none;">
+                  <li><a href="/airport_register"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-card fa-stack-1x"></i></span>Airport Registration</a></li>
+                  <li><a href="/airport_list"><span class="fa-stack fa-lg pull-left"><i class="fa fa-medkit fa-stack-1x "></i></span>Airport Cases List</a></li>
+                  <li><a href="/airport_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Airport Follow Up</a></li>
+                  <li><a href="/airport_symtomatic"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
+                  <li><a href="/complete_airport"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Cases</a></li>
+              </ul>
+          </li>
+          <li>
               <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-credit-card fa-stack-1x"></i></span>TEMPLATE REPORTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
                   <li><a href="/daily_reports">Daily report</a></li>
