--- a/airport_app/templates/airport_app/airport_register.html
+++ b/airport_app/templates/airport_app/airport_register.html
@@ -5,25 +5,31 @@
         <div id="breadcrumb">
           <ul class="breadcrumb">
              <li><i class="fa fa-home"></i><a href="{% url 'veoc:access_dashboard' %}"> Dashboard</a></li>
-             <li class="active">Facility Quarantine Registartion Form</li>
+             <li class="active">Airport Quarantine Registartion Form</li>
           </ul>
         </div><!-- /breadcrumb-->
 
         <div class="padding-md">
           <div class="row">
             <div class="col-md-12">
-                  <form class="calls_form" method="POST" action="{% url 'veoc:quarantine_register' %}" >
+                  <form class="calls_form" method="POST" action="{% url 'airport_app:airport_register' %}" >
                     {% csrf_token %}
                     <div class="form-group col-md-12">
+                    <span style="color:red">
                       <label><i><u>NB</u> : Inputs with * must have values</i></label>
+                    </span>
                     </div>
                     <div class="form-row" id="caller_details_div">
-                       <div class="form-group col-md-6">
-                         <label for="callername">First Name : *</label>
+                       <div class="form-group col-md-4">
+                         <label for="first_name">First Name : *</label>
                          <input class="form-control" type="text" id="first_name" name="first_name" size="45" placeholder="First Name" required/>
                        </div>
-                       <div class="form-group col-md-6">
-                         <label for="callernumber">Last Name : *</label>
+                       <div class="form-group col-md-4">
+                         <label for="middle_name">Middle Name : </label>
+                         <input class="form-control" type="text" id="middle_name" name="middle_name" maxlength="10" size="45" placeholder="Middle Name" required/>
+                       </div>
+                       <div class="form-group col-md-4">
+                         <label for="last_name">Last Name : *</label>
                          <input class="form-control" type="text" id="last_name" name="last_name" maxlength="10" size="45" placeholder="Last Name" required/>
                        </div>
                     </div>
@@ -36,12 +42,12 @@
                          </select>
                        </div>
                        <div class="form-group col-md-6">
-                         <label for="callernumber">Date of Birth : *</label>
+                         <label for="dob">Date of Birth : *</label>
                          <input class="form-control" type="date" value="{{ day }}" id="dob" max='2000-13-13' name="dob">
                        </div>
                     </div>
                     <div class="form-row" id="country_details_div">
-                       <div class="form-group col-md-6">
+                       <div class="form-group col-md-4">
                          <label for="nationality">Nationality : *</label>
                          <select class="form-control" name="nationality" id="nationality">
                               <option value="" disabled selected>Select Nationality</option>
@@ -50,18 +56,7 @@
                               {% endfor %}
                           </select>
                        </div>
-                       <div class="form-group col-md-6">
-                         <label for="site">Quarantine Site : *</label>
-                         <select class="form-control" name="q_site_name" id="q_site_name" >
-                              <option value="" disabled selected>Select Quarantine Site</option>
-                              {% for qty in qua_site %}
-                                  <option value="{{qty.site_name}}">{{qty.site_name}}</option>
-                              {% endfor %}
-                          </select>
-                       </div>
-                     </div>
-                    <div class="form-row" id="country_details_div">
-                       <div class="form-group col-md-6">
+                       <div class="form-group col-md-4">
                          <label for="country">Country of Origin : *</label>
                          <select class="form-control" name="country" id="country" onchange="region_filter()">
                               <option value="" disabled selected>Select Country</option>
@@ -70,21 +65,11 @@
                               {% endfor %}
                           </select>
                        </div>
-                       <div class="form-group col-md-6">
-                         <label for="callernumber">ID / Passport Number : *</label>
-                         <input class="form-control" type="text" id="passport_number" name="passport_number" maxlength="10" size="45" placeholder="Passport Number" required/>
+                       <div class="form-group col-md-4">
+                         <label for="date_of_arrival">Date of Arrival in Kenya: *</label>
+                         <input class="form-control" type="date" value="{{ day }}" id="date_of_arrival" max='2000-13-13' name="date_of_arrival">
                        </div>
-                    </div>
-                    <div class="form-row" id="gender_details_div">
-                       <div class="form-group col-md-6">
-                         <label for="callername">Phone Number : *</label>
-                         <input class="form-control" type="tel" id="phone_number" name="phone_number" onchange="checkPhone()" minlength="10" placeholder="Country Code, Start With +254, e.g +254720000000" required/>
-                       </div>
-                       <div class="form-group col-md-6">
-                         <label for="callernumber">Email Address : </label>
-                         <input class="form-control" type="email" id="email_address" name="email_address" placeholder="Email Address"/>
-                       </div>
-                    </div>
+                     </div>
                      <div class="form-row" id="county_div" style="display: none;">
                        <div class="form-group col-md-4">
                          <label for="county">County : *</label>
@@ -108,36 +93,146 @@
                           </select>
                        </div>
                      </div>
-                     <div class="form-row" id="diagnosis_status_div">
-                       <div class="form-group col-md-6">
-                         <label for="status">Place of Diagnosis : </label>
-                         <input class="form-control" type="text" id="place_of_diagnosis" name="place_of_diagnosis" size="45" placeholder="Place of Diagnosis"/>
+                    <div class="form-row" id="country_details_div">
+                       <div class="form-group col-md-4">
+                         <label for="passport_number">ID / Passport Number : *</label>
+                         <input class="form-control" type="text" id="passport_number" name="passport_number" maxlength="10" size="45" placeholder="Passport Number" required/>
                        </div>
-                       <div class="form-group col-md-6">
-                         <label for="datereport">Date of Contact : *</label>
-                         <input class="form-control" type="date" value="{{ day }}" id="date_of_contact" max='2000-13-13' name="date_of_contact">
+                       <div class="form-group col-md-4">
+                         <label for="phone_number">Phone Number : *</label>
+                         <input class="form-control" type="tel" id="phone_number" name="phone_number" onchange="checkPhone()" minlength="10" placeholder="Country Code, Start With +254, e.g +254720000000" required/>
                        </div>
-                     </div>
-                     <div class="form-row" id="country_details_div">
-                       <div class="form-group col-md-6">
-                         <label for="comorbidity">Comorbidity : </label>
-                         <input class="form-control" type="text" id="comorbidity" name="comorbidity" placeholder="Comorbidity"/>
-                       </div>
-                       <div class="form-group col-md-6">
-                         <label for="drugs">Any drugs on? : </label>
-                         <input class="form-control" type="text" id="drugs" name="drugs" placeholder="Drugs"/>
+                       <div class="form-group col-md-4">
+                         <label for="email_address">Email Address : </label>
+                         <input class="form-control" type="email" id="email_address" name="email_address" placeholder="Email Address"/>
                        </div>
                     </div>
-                     <div class="form-row" id="gender_details_div">
+                     <div class="form-row" id="diagnosis_status_div">
+                       <div class="form-group col-md-4">
+                         <label for="airline">Airline : </label>
+                         <input class="form-control" type="text" id="airline" name="airline" size="45" placeholder="Airline"/>
+                       </div>
+                       <div class="form-group col-md-4">
+                         <label for="flight_number">Flight Number : </label>
+                         <input class="form-control" type="text" id="flight_number" name="flight_number" size="45" placeholder="Flight Number"/>
+                       </div>
+                       <div class="form-group col-md-4">
+                         <label for="seat_number">Seat Number : </label>
+                         <input class="form-control" type="text" id="seat_number" name="seat_number" size="45" placeholder="Seat Number"/>
+                       </div>
+                     </div>
+                     <div class="form-row" id="diagnosis_status_div">
+                       <div class="form-group col-md-4">
+                         <label for="destination_city">Destination City : </label>
+                         <input class="form-control" type="text" id="destination_city" name="destination_city" size="45" placeholder="Destination City"/>
+                       </div>
+                       <div class="form-group col-md-4">
+                         <label for="countries_visited">Countries Visited : </label>
+                         <input class="form-control" type="text" id="countries_visited" name="countries_visited" placeholder="Countries Visited in the past two weeks"/>
+                       </div>
+                       <div class="form-group col-md-4">
+                         <label for="fever">Fever (37.5°C or higher): </label>
+                         <select class="form-control" id="fever" name="fever">
+                             <option style="display:none">Select</option>
+                             <option value="YES">Yes</option>
+                             <option value="NO">No</option>
+                       </select>
+                       </div>
+                    </div>
+                    <div class="form-row" id="country_details_div">
+                      <div class="form-group col-md-3">
+                        <label for="feverish">Feverish : </label>
+                        <select class="form-control" id="feverish" name="feverish">
+                            <option style="display:none">Select</option>
+                            <option value="YES">Yes</option>
+                            <option value="NO">No</option>
+                      </select>
+                      </div>
+                      <div class="form-group col-md-3">
+                        <label for="chills">Chills : </label>
+                        <select class="form-control" id="chills" name="chills">
+                            <option style="display:none">Select</option>
+                            <option value="YES">Yes</option>
+                            <option value="NO">No</option>
+                      </select>
+                      </div>
+                      <div class="form-group col-md-3">
+                        <label for="cough">Cough : </label>
+                        <select class="form-control" id="cough" name="cough">
+                            <option style="display:none">Select</option>
+                            <option value="YES">Yes</option>
+                            <option value="NO">No</option>
+                      </select>
+                      </div>
+                      <div class="form-group col-md-3">
+                        <label for="breathing_difficulty">Difficulty in breathing : </label>
+                        <select class="form-control" id="breathing_difficulty" name="breathing_difficulty">
+                            <option style="display:none">Select</option>
+                            <option value="YES">Yes</option>
+                            <option value="NO">No</option>
+                      </select>
+                      </div>
+                   </div>
+                     <div class="form-row" id="kin_details_div">
                         <div class="form-group col-md-6">
-                          <label for="callername">Next of Kin : </label>
-                          <input class="form-control" type="text" id="nok" name="nok" placeholder="Next of Kin"/>
+                          <label for="callername">Name of Contact Person(Next of kin): </label>
+                          <input class="form-control" type="text" id="nok" name="nok" placeholder="Next of Kin Name"/>
                         </div>
                         <div class="form-group col-md-6">
-                          <label for="callername">Next of Kin Phone No : </label>
+                          <label for="callername">Phone Number of Contact Person : </label>
                           <input class="form-control" type="number" id="nok_phone_num" name="nok_phone_num" minlength="10" placeholder="Next of Kin Phone Number"/>
                         </div>
                      </div>
+                     <div class="form-row" id="country_details_div">
+                       <div class="form-group col-md-4">
+                         <label for="residence">Village/House Number/Hotel : </label>
+                         <input class="form-control" type="text" id="residence" name="residence" placeholder="Residence"/>
+                       </div>
+                       <div class="form-group col-md-4">
+                         <label for="estate">Subloaction/Estate : </label>
+                         <input class="form-control" type="text" id="estate" name="estate" placeholder="Subloaction or Estate"/>
+                       </div>
+                       <div class="form-group col-md-4">
+                         <label for="postal_address">Postal Address : </label>
+                         <input class="form-control" type="text" id="postal_address" name="postal_address" placeholder="Postal Address"/>
+                       </div>
+                    </div>
+                    <div class="form-row" id="country_details_div">
+                      <div class="form-group col-md-6">
+                        <label for="measured_temperature">Measured Temperature : </label>
+                        <input class="form-control" type="text" id="measured_temperature" name="measured_temperature" placeholder="Measured Temperature"/>
+                      </div>
+                      <div class="form-group col-md-6">
+                        <label for="arrival_airport_code">Arrival Airport Code : </label>
+                        <input class="form-control" type="text" id="arrival_airport_code" name="arrival_airport_code" placeholder="Arrival Airport Code"/>
+                      </div>
+                   </div>
+                   <div class="form-row" id="save_div">
+                   <div class="form-group col-md-4">
+                     <label for="released">Released : </label>
+                     <select class="form-control" id="released" name="released">
+                         <option style="display:none">Select</option>
+                         <option value="YES">Yes</option>
+                         <option value="NO">No</option>
+                   </select>
+                   </div>
+                   <div class="form-group col-md-4">
+                     <label for="risk_assessment_referal">Risk Assesment Referral : </label>
+                       <select class="form-control" id="risk_assessment_referal" name="risk_assessment_referal">
+                           <option style="display:none">Select</option>
+                           <option value="YES">Yes</option>
+                           <option value="NO">No</option>
+                     </select>
+                   </div>
+                   <div class="form-group col-md-4">
+                     <label for="designated_hospital_referal">Designated Hospital Referral  : </label>
+                     <select class="form-control" id="designated_hospital_referal" name="designated_hospital_referal">
+                         <option style="display:none">Select</option>
+                         <option value="YES">Yes</option>
+                         <option value="NO">No</option>
+                   </select>
+                   </div>
+                   </div>
                      <div class="form-row" id="save_div">
                        <div class="form-group col-md-12">
                          <button type="submit" id="save_button" class="btn btn-primary">Save</button>
@@ -195,7 +290,7 @@
         var formData = thisForm.serialize();
 
         Swal.fire({
-          title: "Please wait!,Saving Details!",
+          title: "Please wait,Saving Details!",
           // text: "Please wait",
           imageUrl: "/static/images/ajax-loader.gif",
           showConfirmButton: false,
@@ -208,17 +303,17 @@
           success:function(){
             Swal.fire({
               title: 'Success!',
-              text: 'Quarantine Details Saved',
+              text: 'Airport Quarantine Details Saved',
               icon: 'success'
             });
             callsForm[0].reset();
           },
           error:function(er){
-            console.log("Quarantine saving error");
+            console.log("Airport Quarantine saving error");
             console.log(er.responseText);
             Swal.fire({
               title: 'Error!',
-              text: 'Quarantine Details Cannot be Saved',
+              text: 'Airport Quarantine Details Cannot be Saved',
               icon: 'error'
             });
           }
