--- a/airport_app/templates/airport_app/airport_follow_up.html
+++ b/airport_app/templates/airport_app/airport_follow_up.html
@@ -8,7 +8,7 @@
     <div id="main-container">
         <div id="breadcrumb">
             <ul class="breadcrumb">
-                <li><i class="fa fa-home"></i><a href="{% url 'veoc:access_dashboard' %}"> Dashboard</a></li>
+                <li><i class="fa fa-home"></i><a href="{% url 'airport_app:airport_follow_up' %}"> Dashboard</a></li>
                 <li class="active">Airport Quarantine Follow Up</li>
             </ul>
         </div><!-- /breadcrumb-->
