--- a/veoc/templates/veoc/quarantine_follow_up.html
+++ b/veoc/templates/veoc/quarantine_follow_up.html
@@ -62,7 +62,7 @@
                           </tr>
                           </thead>
                           <tbody>
-                          {% for follow in follow_data %}
+                          {% for follow in page_obj %}
                           <tr>
                           {#                                  Check user permission to view names#}
 {#                            <td>*********</td>#}
@@ -118,6 +118,27 @@
                         {% endfor %}
                       </tbody>
     							</table>
+                                    <div class="pagination">
+                                <span class="step-links">
+                                    {% if page_obj.has_previous %}
+                                        <a href="?page=1">&laquo; first</a>
+                                        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                                    {% endif %}
+
+                                    <span class="current">
+                                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                                    </span>
+
+                                    {% if page_obj.has_next %}
+                                        <a href="?page={{ page_obj.next_page_number }}">next</a>
+                                        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                                    {% endif %}
+                                    {#                                    <br>pages#}
+{#                                    {% for i in page_range %}#}
+{#                                        <a href="{{ i }}">{{ i }}</a>#}
+{#                                    {% endfor %}#}
+                                </span>
+                            </div>
                 </div>
               </div>
     				</div>
