ariline contacts submit and completed homecare quarantine list

--- a/veoc/templates/veoc/airport_register.html
+++ b/veoc/templates/veoc/airport_register.html
@@ -134,8 +134,8 @@
                          <label for="fever">Fever (37.5°C or higher): </label>
                          <select class="form-control" id="fever" name="fever">
                              <option style="display:none">Select</option>
-                             <option value="t">Yes</option>
-                             <option value="f">No</option>
+                             <option value="True">Yes</option>
+                             <option value="False">No</option>
                        </select>
                        </div>
                     </div>
@@ -144,32 +144,32 @@
                         <label for="feverish">Feverish : </label>
                         <select class="form-control" id="feverish" name="feverish">
                             <option style="display:none">Select</option>
-                            <option value="t">Yes</option>
-                            <option value="f">No</option>
+                            <option value="True">Yes</option>
+                            <option value="False">No</option>
                       </select>
                       </div>
                       <div class="form-group col-md-3">
                         <label for="chills">Chills : </label>
                         <select class="form-control" id="chills" name="chills">
                             <option style="display:none">Select</option>
-                            <option value="t">Yes</option>
-                            <option value="f">No</option>
+                            <option value="True">Yes</option>
+                            <option value="False">No</option>
                       </select>
                       </div>
                       <div class="form-group col-md-3">
                         <label for="cough">Cough : </label>
                         <select class="form-control" id="cough" name="cough">
                             <option style="display:none">Select</option>
-                            <option value="t">Yes</option>
-                            <option value="f">No</option>
+                            <option value="True">Yes</option>
+                            <option value="False">No</option>
                       </select>
                       </div>
                       <div class="form-group col-md-3">
                         <label for="breathing_difficulty">Difficulty in breathing : </label>
                         <select class="form-control" id="breathing_difficulty" name="breathing_difficulty">
                             <option style="display:none">Select</option>
-                            <option value="t">Yes</option>
-                            <option value="f">No</option>
+                            <option value="True">Yes</option>
+                            <option value="False">No</option>
                       </select>
                       </div>
                    </div>
@@ -212,24 +212,24 @@
                      <label for="released">Released : </label>
                      <select class="form-control" id="released" name="released">
                          <option style="display:none">Select</option>
-                         <option value="t">Yes</option>
-                         <option value="f">No</option>
+                         <option value="True">Yes</option>
+                         <option value="False">No</option>
                    </select>
                    </div>
                    <div class="form-group col-md-4">
                      <label for="risk_assessment_referal">Risk Assesment Referral : </label>
                        <select class="form-control" id="risk_assessment_referal" name="risk_assessment_referal">
                            <option style="display:none">Select</option>
-                           <option value="t">Yes</option>
-                           <option value="f">No</option>
+                           <option value="True">Yes</option>
+                           <option value="False">No</option>
                      </select>
                    </div>
                    <div class="form-group col-md-4">
                      <label for="designated_hospital_referal">Designated Hospital Referral  : </label>
                      <select class="form-control" id="designated_hospital_referal" name="designated_hospital_referal">
                          <option style="display:none">Select</option>
-                         <option value="t">Yes</option>
-                         <option value="f">No</option>
+                         <option value="True">Yes</option>
+                         <option value="False">No</option>
                    </select>
                    </div>
                    </div>
