--- a/airport_app/templates/airport_app/complete_airport.html
+++ b/airport_app/templates/airport_app/complete_airport.html
@@ -3,50 +3,29 @@
 {% block main %}
 
     <script type="text/javascript"
-            src="https://cdn.datatables.net/v/dt/jqc-1.12.3/jszip-2.5.0/pdfmake-0.1.18/dt-1.10.12/b-1.2.2/b-flash-1.2.2/b-html5-1.2.2/b-print-1.2.2/datatables.min.js"></script>
+        src="https://cdn.datatables.net/v/dt/jqc-1.12.3/jszip-2.5.0/pdfmake-0.1.18/dt-1.10.12/b-1.2.2/b-flash-1.2.2/b-html5-1.2.2/b-print-1.2.2/datatables.min.js"></script>
 
             <div id="main-container">
-<<<<<<< HEAD
-              <div id="breadcrumb">
-                <ul class="breadcrumb">
-                   <li><i class="fa fa-home"></i><a href="{% url 'veoc:access_dashboard' %}"> Dashboard</a></li>
-                   <li class="active">Completed Quarantine Report</li>
-                </ul>
-              </div><!-- /breadcrumb-->
-
-              <div class="panel-heading"><b>COVID19 Quarantine Complete Contact Tracing and Follow Up Report</b></div>
-
-              <div class="padding-md">
-                <div class="row">
-                  <div class="col-md-12">
-                    <div class="panel panel-default table-responsive">
-                      <div class="panel-heading">
-                        Completed Quarantine Report
-                        <span class="label label-info pull-right" id="totalspan">{{all_data_count}} Reported cases </span>
-=======
         			<div id="breadcrumb">
         				<ul class="breadcrumb">
         					 <li><i class="fa fa-home"></i><a href="{% url 'veoc:access_dashboard' %}"> Dashboard</a></li>
-        					 <li class="active">Airport Completed Quarantine Report</li>
+        					 <li class="active">Completed Airport Quarantine Report</li>
         				</ul>
         			</div><!-- /breadcrumb-->
 
-              <div class="panel-heading"><b>COVID19 Quarantine Complete</b></div>
-              <div class="panel-body" align="left">
-                  <form class="form-inline" method="post" action="{% url 'airport_app:complete_airport' %}">{% csrf_token %}
-                      <div class="form-group">
-                        <label for="date_from">From :</label>
-                        <input class="form-control" type="date" id="date_from" name="date_from" value="{{ day }}" required>
-                      </div>
-                        &nbsp; &nbsp;
-                      <div class="form-group">
-                        <label for="date_to">To :</label>
-                        <input class="form-control" type="date" id="date_to" name="date_to" value="{{ day }}" required>
->>>>>>> cd5d82af2882a62bb13f5eda5059b3d021459b8f
-                      </div>
-                      <div class="padding-md clearfix">
-                      <table class="table table-hover" id="quarantine_complete_report">
-                        <thead class="thead-dark">
+              <div class="panel-heading"><b>COVID19 Airport Quarantine Complete Cases Report</b></div>
+
+        			<div class="padding-md">
+        				<div class="row">
+        					<div class="col-md-12">
+        						<div class="panel panel-default table-responsive">
+        							<div class="panel-heading">
+        								Completed Airport Quarantine Report
+        								<span class="label label-info pull-right" id="totalspan">{{follow_data_count}} Completed cases </span>
+        							</div>
+        							<div class="padding-md clearfix">
+        							<table class="table table-hover" id="quarantine_complete_report">
+        								<thead class="thead-dark">
                           <tr>
                             <th>Last Name</th>
                             <th>First Name</th>
@@ -65,7 +44,7 @@
                           </tr>
                           </thead>
                           <tbody>
-                          {% for follow in follow_data %}
+                          {% for follow in page_obj %}
                           <tr>
                             <td>{{ follow.patient_contacts.last_name }}</td>
                             <td>{{ follow.patient_contacts.first_name }}</td>
@@ -84,232 +63,70 @@
                           </tr>
                         {% endfor %}
                       </tbody>
-                  </table>
+    							</table>
+                                    <div class="pagination">
+                                <span class="step-links">
+                                    {% if page_obj.has_previous %}
+                                        <a href="?page=1">&laquo; first</a>
+                                        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                                    {% endif %}
+
+                                    <span class="current">
+                                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                                    </span>
+
+                                    {% if page_obj.has_next %}
+                                        <a href="?page={{ page_obj.next_page_number }}">next</a>
+                                        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                                    {% endif %}
+                                    {#                                    <br>pages#}
+{#                                    {% for i in page_range %}#}
+{#                                        <a href="{{ i }}">{{ i }}</a>#}
+{#                                    {% endfor %}#}
+                                </span>
+                            </div>
                 </div>
               </div>
-            </div>
-          </div><!-- /row-->
+    				</div>
+    			</div><!-- /row-->
         </div><!-- /.padding-md -->
       </div><!-- /main-container -->
 
 {% endblock %}
 
 {% block script %}
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script> -->
-    <script>
-        $(document).ready(function () {
-            $('#quarantine_report').DataTable({
-                "order": [],
-                dom: 'Bfrtip',
-                buttons: [
-                    'copy', 'csv', 'excel', 'pdf', 'print'
-                ]
-            });
+  <script>
+    $(document).ready(function () {
+          $('#quarantine_complete_report').DataTable({
+              "order": [],
+              dom: 'Bfrtip',
+              buttons: [
+                  'copy', 'csv', 'excel', 'pdf', 'print'
+              ]
+          });
 
-            // Setup - add a text input to each footer cell
-            $('#quarantine_report thead td').each(function () {
-                var title = $(this).text();
-                $(this).html('<input type="text" placeholder="Search ' + title + '" />');
-            });
+          // Setup - add a text input to each footer cell
+          $('#quarantine_complete_report thead td').each(function () {
+              var title = $(this).text();
+              $(this).html('<input type="text" placeholder="Search ' + title + '" />');
+          });
 
-            // DataTable
-            var table = $('#quarantine_report').DataTable();
+          // DataTable
+          var table = $('#quarantine_complete_report').DataTable();
 
-            // Apply the search
-            table.columns().every(function () {
-                var that = this;
+          // Apply the search
+          table.columns().every(function () {
+              var that = this;
 
-                $('input', this.header()).on('keyup change', function () {
-                    if (that.search() !== this.value) {
-                        that
-                            .search(this.value)
-                            .draw();
-                    }
-                });
-            });
+              $('input', this.header()).on('keyup change', function () {
+                  if (that.search() !== this.value) {
+                      that
+                              .search(this.value)
+                              .draw();
+                  }
+              });
+          });
+      });
 
-        });
-
-        $(document).on("click", '.map_view', function (e) {
-            var id = $(this).data('id');
-            var names = $(this).data('names');
-            var contact = $(this).data('last_contact');
-            var phone = $(this).data('phone_number');
-
-            // console.log(names);
-
-            $(".id").val(id);
-            $(".first_name").val(names);
-            $(".date_of_contact").val(contact);
-            $(".phone_number").val(phone);
-        });
-
-        $(document).on("click", '.company_view', function (e) {
-            console.log("inside company_view");
-            var id = $(this).data('id');
-            var c_name = $(this).data('company_name');
-            var c_phone = $(this).data('company_phone');
-            var c_address = $(this).data('company_address');
-            var c_street = $(this).data('company_street');
-            var c_building = $(this).data('company_building');
-            var v_registration = $(this).data('vehicle_registration');
-            var village_ = $(this).data('village');
-            var street_ = $(this).data('street');
-
-            console.log(c_name);
-
-            $(".id").val(id);
-            $(".view_company_name").val(c_name);
-            $(".view_company_phone").val(c_phone);
-            $(".view_company_address").val(c_address);
-            $(".view_company_street").val(c_street);
-            $(".view_company_building").val(c_building);
-            $(".view_vehicle_registration").val(v_registration);
-            $(".view_village").val(village_);
-            $(".view_street").val(street_);
-        });
-
-        $(document).on("click", '.hotel_view', function (e) {
-            var id = $(this).data('id');
-            var hotel_ = $(this).data('hotel');
-            var h_phone = $(this).data('hotel_phone');
-            var h_town = $(this).data('hotel_town');
-            var d_check_in = $(this).data('date_check_in');
-            var d_check_out = $(this).data('date_check_out');
-            var cough_ = $(this).data('cough');
-            var b_difficulty = $(this).data('breathing_difficulty');
-            var fever_ = $(this).data('fever');
-            var s_taken = $(this).data('sample_taken');
-            var a_taken = $(this).data('action_taken');
-
-            console.log(hotel_);
-
-            $(".id").val(id);
-            $(".view_hotel").val(hotel_);
-            $(".view_hotel_phone").val(h_phone);
-            $(".view_hotel_town").val(h_town);
-            $(".view_date_check_in").val(d_check_in);
-            $(".view_date_check_out").val(d_check_out);
-            $(".view_cough").val(cough_);
-            $(".view_breathing_difficulty").val(b_difficulty);
-            $(".view_fever").val(fever_);
-            $(".view_sample_taken").val(s_taken);
-            $(".view_action_taken").val(a_taken);
-        });
-
-        $(document).on("click", '.edit_button', function (e) {
-            var id = $(this).data('id');
-            var first_name = $(this).data('first_name');
-            var last_name = $(this).data('last_name');
-            var country = $(this).data('country');
-            var nationality = $(this).data('nationality');
-            var phone_number = $(this).data('phone_number');
-            var country = $(this).data('country');
-            var comorbidity = $(this).data('cormobidity');
-            var drugs = $(this).data('drugs');
-
-            console.log(id);
-            console.log(first_name);
-
-            $(".id").val(id);
-            $(".f_name").val(first_name);
-            $(".l_name").val(last_name);
-            $(".cntry").val(country);
-            $(".natnality").val(nationality);
-            $(".phone_num").val(phone_number);
-            $(".comorbidity").val(comorbidity);
-            $(".drugs").val(drugs);
-        });
-
-        function openMap() {
-            google.charts.load('current', {'packages': ['map']});
-            google.charts.setOnLoadCallback(drawCountyChart);
-        }
-
-        function drawCountyChart() {
-            // console.log("inside drawCountyChart");
-
-            item_id = $(".id").val();
-            // console.log(item_id)
-            $.ajax({
-                url: '/get_quarantine_coordinates/',
-                type: 'POST',
-                datatype: 'json',
-                data: {item_id: item_id, csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val()},
-                success: function (data) {
-                    // console.log(JSON.stringify(data));
-                    var mydata = new google.visualization.DataTable();
-                    mydata.addColumn('number', 'LATITUDE');
-                    mydata.addColumn('number', 'LONGITUDE');
-                    mydata.addColumn('string', 'NAME');
-
-                    for (var i = 0; i < data.length; i++) {
-                        x = data[i].lat;//get the longitude from models
-                        y = data[i].lng;//get latitude from models
-                        z = "Day " + data[i].follow_up_day.toString();//get the position from models
-                        x = parseFloat(x);//convert the longitude to float from string
-                        y = parseFloat(y);//convert the latitude to float from string
-                        mydata.addRow([x, y, z]);//add the coordinates to the map
-
-                    }
-
-                    var options = {
-                        icons: {
-                            default: {
-                                normal: 'https://img.icons8.com/color/48/000000/google-maps-new.png',
-                                selected: 'https://img.icons8.com/color/48/000000/google-maps-new.png'
-                            }
-                        },
-                        showTip: true,
-                        useMapTypeControl: true,
-                        zoomLevel: 9,
-                        enableScrollWheel: true,
-                        mapType: 'styledMap',
-                        center: {lat: -33.8688, lng: 151.2195},
-                        maps: {
-                            // Your custom mapTypeId holding custom map styles.
-                            styledMap: {
-                                name: 'Styled Map', // This name will be displayed in the map type control.
-                                styles: [
-                                    {
-                                        featureType: 'poi.attraction',
-                                        stylers: [{color: '#fce8b2'}]
-                                    },
-                                    {
-                                        featureType: 'road.highway',
-                                        stylers: [{hue: '#0277bd'}, {saturation: -50}]
-                                    },
-                                    {
-                                        featureType: 'road.highway',
-                                        elementType: 'labels.icon',
-                                        stylers: [{hue: '#000'}, {saturation: 100}, {lightness: 50}]
-                                    },
-                                    {
-                                        featureType: 'landscape',
-                                        stylers: [{hue: '#259b24'}, {saturation: 10}, {lightness: -22}]
-                                    }
-                                ]
-                            }
-                        }
-                    };
-
-                    var map = new google.visualization.Map(document.getElementById('map_div'));
-                    // map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
-                    map.draw(mydata, options);
-                },
-                error: function () {
-                    // alert("error in getting coordinates, try again");
-                }
-            });
-
-        }
-
-        function openCompany() {
-
-        }
-
-        function openHotel() {
-        }
-    </script>
+  </script>
 {% endblock %}
